--- a/.env.example
+++ b/.env.example
@@ -60,3 +60,5 @@ TELEGRAM_BOT_URL="t.me/turtradingalertspoolbot."
 TELEGRAM_CHANEL="https://t.me/joinchat/AAAAAEqRKqIPttIuFbGc1w"
 
 TELEGRAM_CHANNEL_ID="-1001251027618"
+
+GITLAB_TOKEN="kAAy8tTsLS793Jo_E6Yd"
