--- a/.env.example
+++ b/.env.example
@@ -23,11 +23,11 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
+#MAIL_DRIVER=smtp
+#MAIL_HOST=smtp.mailtrap.io
 
-#MAIL_DRIVER=sendgrid
-#SENDGRID_API_KEY=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
+MAIL_DRIVER=sendgrid
+SENDGRID_API_KEY=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
 
 MAIL_PORT=2525
 MAIL_USERNAME=f2dcdd5328bda7
@@ -60,5 +60,3 @@ TELEGRAM_BOT_URL="t.me/turtradingalertspoolbot."
 TELEGRAM_CHANEL="https://t.me/joinchat/AAAAAEqRKqIPttIuFbGc1w"
 
 TELEGRAM_CHANNEL_ID="-1001251027618"
-
-GITLAB_TOKEN="kAAy8tTsLS793Jo_E6Yd"
